--- a/Cursor Vibe/index.html
+++ b/Cursor Vibe/index.html
@@ -18,6 +18,7 @@
       <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
+        <li><a href="#demo">Demo</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -51,6 +52,19 @@
           <h3>Project Three</h3>
           <p>A brief description of your third project.</p>
         </article>
+      </div>
+    </section>
+
+    <section id="demo" class="section">
+      <h2>Try it</h2>
+      <p class="section-desc">Embed your software below—replace the <code>src</code> URL with your app’s live link.</p>
+      <div class="iframe-wrap">
+        <iframe
+          src="https://example.com"
+          title="Embedded app"
+          allow="fullscreen"
+          loading="lazy"
+        ></iframe>
       </div>
     </section>
 
