--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
       <p class="section-desc">Embed your software below—replace the <code>src</code> URL with your app's live link.</p>
       <div class="iframe-wrap">
         <iframe
-          src="https://example.com"
-          title="Embedded app"
+          src="https://andrewbarnish.embed-omniapp.co/embed/login?contentPath=%2Fdashboards%2Fc99da56b&externalId=test_id&name=Andrew+Barnish&nonce=7BIWG7Uy063aSqu9ZjkgQ9lFGma4nAMd&signature=Y4MDyqaSrgeCGumNCgun9nGEBiGXGV7O2P3CZMIn-3A&accessBoost=true&preserveEntityFolderContentRole=false"
+          title="Omni Analytics"
           allow="fullscreen"
           loading="lazy"
         ></iframe>
