--- a/Cursor Vibe/index.html
+++ b/Cursor Vibe/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome | My Site</title>
+  <title>Barnish Land | Welcome</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
   
   <header>
     <nav>
-      <a href="./" class="logo">Cursor Vibe</a>
+      <a href="./" class="logo">Barnish Embed</a>
       <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
@@ -27,14 +27,14 @@
   <main>
     <section class="hero">
       <span class="hero-label">Hello, I'm</span>
-      <h1>Your Name</h1>
-      <p class="hero-tagline">Building things on the web with a great vibe.</p>
-      <a href="#contact" class="btn btn-primary">Get in Touch</a>
+      <h1>Barnish</h1>
+      <p class="hero-tagline">VibeCode embed project.</p>
+      <a href="#contact" class="btn btn-primary">Do not contact</a>
     </section>
 
     <section id="about" class="section">
       <h2>About</h2>
-      <p>This is your space. Edit <code>index.html</code> and <code>styles.css</code> to make it yours. GitHub Pages will host it for free—just push to a repo and enable Pages in Settings.</p>
+      <p>Testing out the Embed options of Omni (GOAT).</p>
     </section>
 
     <section id="projects" class="section">
@@ -42,7 +42,7 @@
       <div class="project-grid">
         <article class="card">
           <h3>Project One</h3>
-          <p>A brief description of your first project.</p>
+          <p>All things embed.</p>
         </article>
         <article class="card">
           <h3>Project Two</h3>
@@ -57,7 +57,7 @@
 
     <section id="demo" class="section">
       <h2>Try it</h2>
-      <p class="section-desc">Embed your software below—replace the <code>src</code> URL with your app’s live link.</p>
+      <p class="section-desc">Embed below.</p>
       <div class="iframe-wrap">
         <iframe
           src="https://andrewbarnish.embed-omniapp.co/embed/login?contentPath=%2Fdashboards%2Fc99da56b&externalId=test_id&name=Andrew+Barnish&nonce=7BIWG7Uy063aSqu9ZjkgQ9lFGma4nAMd&signature=Y4MDyqaSrgeCGumNCgun9nGEBiGXGV7O2P3CZMIn-3A&accessBoost=true&preserveEntityFolderContentRole=false"
