--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   <header>
     <nav>
-      <a href="./" class="logo">Cursor Vibe</a>
+      <a href="./" class="logo">TEST</a>
       <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
