--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <main>
     <section class="hero">
-      <span class="hero-label">Hello, I'm</span>
+      <span class="hero-label">TESSSST</span>
       <h1>Your Name</h1>
       <p class="hero-tagline">Building things on the web with a great vibe.</p>
       <a href="#contact" class="btn btn-primary">Get in Touch</a>
