--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Edit this file (root index.html) to change the live site. Push to main to update. -->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
