--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
         <select id="team-select" class="login-select" required>
           <option value="" disabled selected>Select a team</option>
           <option value="mercedes">Mercedes</option>
-          <option value="red-bull">Red Bull Racing</option>
+          <option value="red-bull">Red Bull</option>
           <option value="ferrari">Ferrari</option>
           <option value="mclaren">McLaren</option>
           <option value="alpine">Alpine</option>
