--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <ul class="nav-links">
         <li><a href="#demo">Dashboard</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="login.html" class="nav-cta">Switch team</a></li>
+        <li><a href="login.html" class="nav-cta switch-team-link">Switch team</a></li>
       </ul>
     </nav>
   </header>
@@ -40,7 +40,7 @@
     <section id="demo" class="section section--dashboard">
       <div class="section-header">
         <h2 class="section-title">Live stats &amp; analytics</h2>
-        <p class="section-desc">Your embedded dashboard—filtered by the team you selected. <a href="login.html">Switch team</a> to see another view.</p>
+        <p class="section-desc">Your embedded dashboard—filtered by the team you selected. <a href="login.html" class="switch-team-link">Switch team</a> to see another view.</p>
       </div>
       <div class="iframe-wrap">
         <iframe
@@ -70,7 +70,7 @@
         <article class="card">
           <span class="card-kicker">Access</span>
           <h3>Switch anytime</h3>
-          <p>Use “Switch team” to view the portal as another team—handy for demos and cross-team review.</p>
+          <p>Use <span id="switch-team-label">"Switch team"</span> to view the portal as another team—handy for demos and cross-team review.</p>
         </article>
       </div>
     </section>
